--- a/test.html
+++ b/test.html
@@ -50,7 +50,7 @@
             <div class="nav-area">
                 <button type="button" id="prev-btn" class="btn-prev" style="display: none;">이전</button>
                 <button type="button" id="next-btn" class="btn-next" disabled style="display: none;">다음</button>
-                <button type="button" id="submit-btn" class="btn-submit" style="display: none;">결과 분석하기</button>
+                <button id="submit-btn" class="nav-btn submit-btn" style="display: none;">제출하기</button>
             </div>
         </form>
     </div>
