--- a/admin.html
+++ b/admin.html
@@ -78,7 +78,6 @@
             background: #f1f3f5;
             border-radius: 12px;
             display: flex;
-            center;
             justify-content: center;
             align-items: center;
             font-size: 20px;
@@ -102,12 +101,19 @@
             padding: 30px;
             border-radius: var(--radius);
             box-shadow: var(--shadow);
+            overflow-x: auto;
         }
 
         .action-bar {
             display: flex;
             justify-content: space-between;
             margin-bottom: 20px;
+            align-items: center;
+        }
+
+        .btn-group {
+            display: flex;
+            gap: 10px;
         }
 
         .btn-bulk {
@@ -127,9 +133,19 @@
             pointer-events: all;
         }
 
+        .btn-csv {
+            background: #228be6;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 8px;
+            font-weight: 600;
+        }
+
         table {
             width: 100%;
             border-collapse: collapse;
+            min-width: 900px;
         }
 
         th {
@@ -138,12 +154,14 @@
             font-size: 13px;
             color: #adb5bd;
             border-bottom: 2px solid #eee;
+            white-space: nowrap;
         }
 
         td {
             padding: 15px 10px;
             font-size: 14px;
             border-bottom: 1px solid #f8f9fa;
+            vertical-align: middle;
         }
 
         input[type="checkbox"] {
@@ -165,7 +183,19 @@
             background: #f1f3f5;
         }
 
-        /* Progress Modal */
+        /* Type Badge */
+        .t-badge {
+            padding: 4px 8px;
+            border-radius: 4px;
+            font-size: 11px;
+            font-weight: 700;
+            color: #fff;
+            display: inline-block;
+            width: 60px;
+            text-align: center;
+        }
+
+        /* Modal */
         #modal {
             display: none;
             position: fixed;
@@ -241,7 +271,10 @@
     <div class="table-container">
         <div class="action-bar">
             <strong>지원자 목록</strong>
-            <button class="btn-bulk" id="btn-bulk" onclick="bulkDownload()">📄 선택 항목 PDF 일괄 저장</button>
+            <div class="btn-group">
+                <button class="btn-csv" onclick="downloadCSV()">📊 명단 Excel 다운로드</button>
+                <button class="btn-bulk" id="btn-bulk" onclick="bulkDownload()">📄 선택 항목 PDF 일괄 저장</button>
+            </div>
         </div>
         <table>
             <thead>
@@ -249,8 +282,10 @@
                     <th width="40"><input type="checkbox" onchange="toggleAll(this)"></th>
                     <th>이름</th>
                     <th>연락처</th>
+                    <th>총점</th>
+                    <th>유형</th>
+                    <th>신뢰도</th>
                     <th>응시일시</th>
-                    <th>상태</th>
                     <th>관리</th>
                 </tr>
             </thead>
@@ -275,90 +310,146 @@
 
     <script>
         const URL = "https://script.google.com/macros/s/AKfycbxWJqjwMgbsySFDu2toUnDaoqZb5AVLdtMB0FUjoO1lLpliA3KuoZfGEdUtlUPR4QnI/exec";
-        let db = [];
+        let db = []; // Raw DB
+        let processedDB = []; // DB with scores
         let stop = false;
 
-        // --- STRICT MAPPING ---
+        // SCORING LOGIC DUPLICATED FROM REPORT FOR ADMIN VIEW
+        // 6 Categories (Base 1-60 + SJT 81-100) are used for total. 
+        // Here we just need TOTAL SCORE for listing.
+        // Cap Map 
+        const CATS = {
+            "C1": { range: [1, 10], sjt: [81, 88] },
+            "C2": { range: [11, 20], sjt: [82, 87, 91, 98] },
+            "C3": { range: [21, 30], sjt: [84, 93] },
+            "C4": { range: [31, 40], sjt: [83, 90, 95, 97] },
+            "C5": { range: [41, 50], sjt: [86, 96, 100] },
+            "C6": { range: [51, 60], sjt: [85, 89, 94, 99] }
+        };
+
+        function calc(u) {
+            let totalSum = 0;
+            // Cats
+            for (const [k, cfg] of Object.entries(CATS)) {
+                let p1 = 0, p2 = 0, maxP1 = 0, maxP2 = 0;
+                // Part 1
+                for (let i = cfg.range[0]; i <= cfg.range[1]; i++) {
+                    if (u['Q' + i] == 'A') p1 += 10; maxP1 += 10;
+                }
+                // Part 2
+                for (let q of cfg.sjt) {
+                    const b = parseInt(u[`Q${q}_Best`] || 0);
+                    const w = parseInt(u[`Q${q}_Worst`] || 0);
+                    if (b === 1) p2 += 5; if (b === 3) p2 -= 5;
+                    if (w === 2) p2 += 5; if (w === 4) p2 -= 5;
+                    maxP2 += 10;
+                }
+                totalSum += Math.max(0, Math.round(((p1 + p2) / (maxP1 + maxP2)) * 100));
+            }
+            const finalScore = Math.round(totalSum / 6);
+
+            // Type
+            let type = "";
+            if (finalScore <= 40) type = "보완형";
+            else if (finalScore <= 60) type = "잠재형";
+            else if (finalScore <= 80) type = "성장형";
+            else type = "주도형";
+
+            // Reliability
+            let rel = 0;
+            for (let i = 1; i <= 20; i++) if (u['Q' + i] && u['Q' + (60 + i)] && u['Q' + i] === u['Q' + (60 + i)]) rel++;
+            const relStr = rel >= 18 ? "High" : (rel >= 14 ? "Mid" : "Low");
+
+            return { s: finalScore, t: type, r: relStr };
+        }
+
         function mapUser(raw) {
-            // Find keys dynamically
             return {
                 name: getVal(raw, ['성명', '이름', 'name']),
                 phone: getVal(raw, ['휴대폰번호', '연락처', '번호', 'phone']),
                 birth: getVal(raw, ['생년월일', '생년', 'birth']),
                 date: getVal(raw, ['타임스탬프', '응시일시', '일시', 'timestamp']),
-                raw: raw // keep raw for scoring
+                raw: raw
             };
         }
-
-        function getVal(obj, keys) {
-            for (let k of keys) if (obj[k] != null && obj[k] !== "") return obj[k];
-            return "-";
-        }
-
-        // --- SIMPLE SCORE ESTIMATOR FOR ADMIN VIEW --- 
-        // Note: Exact complex logic is in report.html. This is approximate for dashboard speed.
-        function estScore(raw) {
-            let s = 0;
-            // Simple Part 1
-            for (let i = 1; i <= 80; i++) if (raw['Q' + i] === 'A') s += 10; else s += 5;
-            // Simple Part 2 (Just add raw presence)
-            // Just return normalized approx index 0-100 for display
-            return Math.min(100, Math.round(s / 10)); // Rough estimate
-        }
+        function getVal(obj, keys) { for (let k of keys) if (obj[k] != null && obj[k] !== "") return obj[k]; return "-"; }
 
         async function loadData() {
             try {
                 const res = await fetch(URL);
                 const json = await res.json();
-                db = json.reverse();
-                render();
-            } catch (e) { alert("Error loading data"); }
+                db = json.reverse(); // Newest first
+                processAndRender();
+            } catch (e) { console.error(e); alert("데이터 로딩 실패"); }
         }
 
-        function render() {
-            document.getElementById('cnt-total').innerText = db.length;
+        function processAndRender() {
+            processedDB = db.map(raw => {
+                const info = mapUser(raw);
+                const stats = calc(raw);
+                return { ...info, stats };
+            });
 
-            // Today
+            // Calc Stats
+            const total = processedDB.length;
             const now = new Date().toISOString().split('T')[0];
-            let today = 0;
+            const today = processedDB.filter(p => p.date.includes(now)).length;
 
+            let sum = 0;
+            processedDB.forEach(p => sum += p.stats.s);
+            const avg = total > 0 ? Math.round(sum / total) : 0;
+
+            document.getElementById('cnt-total').innerText = total;
+            document.getElementById('cnt-today').innerText = today;
+            document.getElementById('avg-score').innerText = avg + "점";
+
+            // Render Table
             const tbody = document.getElementById('tbody');
             tbody.innerHTML = "";
 
-            db.forEach((item, idx) => {
-                const u = mapUser(item);
-                if (u.date.includes(now)) today++;
-
+            processedDB.forEach((p, idx) => {
                 const tr = document.createElement('tr');
+
+                // Colors
+                let tCol = "#fab005"; // Yellow
+                if (p.stats.t === "주도형") tCol = "#0ca678"; // Green
+                if (p.stats.t === "보완형") tCol = "#adb5bd"; // Gray
+
+                let rCol = "black";
+                if (p.stats.r === "Low") rCol = "#e03131";
+
                 tr.innerHTML = `
                     <td><input type="checkbox" class="chk" value="${idx}" onchange="chk()"></td>
-                    <td><b>${u.name}</b></td>
-                    <td>${u.phone}</td>
-                    <td>${u.date.split('T')[0]}</td>
-                    <td><span style="background:#e6fcf5; color:#0ca678; padding:3px 8px; border-radius:10px; font-size:12px; font-weight:700;">검사 완료</span></td>
-                    <td><button class="btn-small" onclick="view('${u.name}','${u.phone}')">상세보기</button></td>
+                    <td><b>${p.name}</b></td>
+                    <td>${p.phone}</td>
+                    <td><strong style="color:var(--primary); font-size:16px;">${p.stats.s}</strong></td>
+                    <td><span class="t-badge" style="background:${tCol}">${p.stats.t}</span></td>
+                    <td style="color:${rCol}; font-weight:700;">${p.stats.r}</td>
+                    <td>${p.date.split('T')[0]}</td>
+                    <td><button class="btn-small" onclick="view('${p.name}','${p.phone}')">상세보기</button></td>
                 `;
                 tbody.appendChild(tr);
             });
-            document.getElementById('cnt-today').innerText = today;
-            document.getElementById('avg-score').innerText = "집계 중"; // Placeholder
         }
 
-        function toggleAll(el) {
-            document.querySelectorAll('.chk').forEach(c => c.checked = el.checked);
-            chk();
+        function downloadCSV() {
+            if (processedDB.length === 0) return;
+            // Header
+            let csv = "\uFEFF이름,연락처,생년월일,총점,유형,신뢰도,응시일시\n";
+            processedDB.forEach(p => {
+                csv += `${p.name},${p.phone},${p.birth},${p.stats.s},${p.stats.t},${p.stats.r},${p.date}\n`;
+            });
+
+            const blob = new Blob([csv], { type: 'text/csv;charset=utf-8;' });
+            const link = document.createElement('a');
+            link.href = URL.createObjectURL(blob);
+            link.download = `GNFit_명단_${new Date().toISOString().slice(0, 10)}.csv`;
+            link.click();
         }
 
-        function chk() {
-            const n = document.querySelectorAll('.chk:checked').length;
-            const btn = document.getElementById('btn-bulk');
-            if (n > 0) btn.classList.add('active'); else btn.classList.remove('active');
-        }
-
-        function view(n, p) {
-            window.location.href = `report.html?name=${encodeURIComponent(n)}&phone=${encodeURIComponent(p)}`;
-        }
-
+        function toggleAll(el) { document.querySelectorAll('.chk').forEach(c => c.checked = el.checked); chk(); }
+        function chk() { const n = document.querySelectorAll('.chk:checked').length; const b = document.getElementById('btn-bulk'); if (n > 0) b.classList.add('active'); else b.classList.remove('active'); }
+        function view(n, p) { window.location.href = `report.html?name=${encodeURIComponent(n)}&phone=${encodeURIComponent(p)}`; }
         function stopCalc() { stop = true; document.getElementById('modal').style.display = 'none'; }
 
         async function bulkDownload() {
@@ -366,42 +457,28 @@
             if (list.length === 0) return;
             if (!confirm(`선택한 ${list.length}명의 보고서를 다운로드하시겠습니까?`)) return;
 
-            stop = false;
-            document.getElementById('modal').style.display = 'flex';
+            stop = false; document.getElementById('modal').style.display = 'flex';
             const frame = document.getElementById('report-frame').contentWindow;
 
             for (let i = 0; i < list.length; i++) {
                 if (stop) break;
                 const idx = list[i].value;
-                const raw = db[idx];
-                const u = mapUser(raw);
+                const raw = db[idx]; // Use RAW db index
+                const p = processedDB[idx];
 
-                // Update UI
-                document.getElementById('p-status').innerText = `생성 중: ${u.name} (${i + 1}/${list.length})`;
+                document.getElementById('p-status').innerText = `생성 중: ${p.name} (${i + 1}/${list.length})`;
                 document.getElementById('p-fill').style.width = `${((i + 1) / list.length) * 100}%`;
 
-                // 1. Inject Raw Data (Report handles logic)
-                frame.loadForPrint(raw); // Pass RAW object
-
-                // 2. Wait for Visuals (0.8s)
+                frame.loadForPrint(raw); // Logic in report
                 await new Promise(r => setTimeout(r, 800));
 
-                // 3. Save
                 const el = frame.document.getElementById('report-content');
-                const opt = {
-                    margin: 0,
-                    filename: `${u.name}_${u.birth}_GNFit_보고서.pdf`,
-                    image: { type: 'jpeg', quality: 0.98 },
-                    html2canvas: { scale: 2 },
-                    jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait' }
-                };
+                const opt = { margin: 0, filename: `${p.name}_${p.birth}_GNFit_보고서.pdf`, image: { type: 'jpeg', quality: 0.98 }, html2canvas: { scale: 2 }, jsPDF: { unit: 'mm', format: 'a4' } };
                 await html2pdf().set(opt).from(el).save();
-
-                // 4. Cool down (0.5s)
                 await new Promise(r => setTimeout(r, 500));
             }
             document.getElementById('modal').style.display = 'none';
-            if (!stop) alert("일괄 다운로드가 완료되었습니다!");
+            if (!stop) alert("완료!");
         }
 
         window.onload = loadData;
